🐛Fixed Error With Icon Alignment

--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,7 @@ textarea {
 }
 
 .material-icons {
-    vertical-align: -25%
+    vertical-align: -25%;
 }
 
 /* ===== Speech Bubble ================================================== */
